--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,11 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.2'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.android.volley:volley:1.1.0'
+
+
+    implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+    implementation "com.google.android.material:material:1.0.0"
 }
