--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,19 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_main"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_main_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VehicleParking">
-        <activity android:name=".BookingActivity"></activity>
+        <activity android:name=".HistoryActivity"></activity>
+        <activity android:name=".HelpActivity" />
+        <activity android:name=".QrActivity" />
+        <activity android:name=".BookingActivity" />
         <activity android:name=".ActivityProfile" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
